// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: relative;"
    >
      <span
        class="t-button__text"
      >
        Open Modal
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: relative;"
    >
      <span
        class="t-button__text"
      >
        Open Modal
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`custom.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px; position: relative;"
    >
      <span
        class="t-button__text"
      >
        只显示确认按钮
      </span>
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px; position: relative;"
    >
      <span
        class="t-button__text"
      >
        自定义按钮内容
      </span>
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px; position: relative;"
    >
      <span
        class="t-button__text"
      >
        自定义内容
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: relative;"
    >
      <span
        class="t-button__text"
      >
        Open Modal
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`modal.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="position: relative;"
    >
      <span
        class="t-button__text"
      >
        Open Modal
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`position.jsx 1`] = `
<DocumentFragment>
  <div>
    <div>
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="margin-right: 16px; position: relative;"
      >
        <span
          class="t-button__text"
        >
          默认
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="margin-right: 16px; position: relative;"
      >
        <span
          class="t-button__text"
        >
          顶部
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          自定义
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`warning.jsx 1`] = `
<DocumentFragment>
  <div>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px; position: relative;"
    >
      <span
        class="t-button__text"
      >
        提示反馈
      </span>
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px; position: relative;"
    >
      <span
        class="t-button__text"
      >
        成功反馈
      </span>
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px; position: relative;"
    >
      <span
        class="t-button__text"
      >
        警示反馈
      </span>
    </button>
    <button
      class="t-button t-button--theme-primary t-button--variant-base"
      style="margin-right: 16px; position: relative;"
    >
      <span
        class="t-button__text"
      >
        错误反馈
      </span>
    </button>
  </div>
</DocumentFragment>
`;
